added page links

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*=========================================================
-Author       : Bauddhik geek.
-Template Name: Bauddhik geek Landing Page
+Author       : Benevox.
+Template Name: Afri-coders Landing Page
 Version      : 1.1.9
 ==============================================================*/
 
